make bug reports more readable